--- a/style.css
+++ b/style.css
@@ -30,8 +30,40 @@ body{
     margin: 0 auto;
     padding: 0;
 }
+body{
+    display:flex;
+    justify-content:center;
+    align-items: center;
+    background:white;
+    height:100vh;
+    margin:0;
+}
 
-.timeline:before {
+.changelog-container{
+    border:2px solid black;
+    border-radius: 12px;
+    padding:2rem;
+    max-width: 500px;
+    width:100%;
+    height:80vh;
+    box-shadow: 0 4px 12px rgba(0,0,0,0.05);
+}
+
+.changelog-header{
+    text-align: center;
+}
+
+.changelog-header p{
+    color:#777;
+}
+
+.timeline {
+    position: relative;
+    margin: 0 auto;
+    padding: 0;
+}
+
+.timeline::before {
     content: '';
     position: absolute;
     width: 2px;
@@ -43,11 +75,26 @@ body{
 }
 
 
-
-.timeline-item {
+.timeline-item{
+    position:relative;
     margin-bottom: 20px;
-    position: relative;
-    width: calc(50% + 1px);
-    padding-right: 20px;
+    width:50%;
+    padding-right:40px;
     text-align: right;
+}
+
+
+.timeline-item::before{
+    content:"";
+    position:absolute;
+    top:50%;
+    right:10px;
+    transform:translateY(-50%);
+    width:12px;
+    height:12px;
+    background-color: black;
+    border-radius: 50%;
+    border:2px solid white;
+    box-sizing: content-box;
+    z-index: 1;
 }
