--- a/style.css
+++ b/style.css
@@ -70,8 +70,7 @@ body{
     background-color: black;
     top: 0;
     bottom: 0;
-    left: 50%;
-    margin-left: -1px;
+    left: calc(50% + 21px);
 }
 
 
